<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Notes - Fast &amp; Simple
  ~ Copyright (C) 2025 IconsNotFound
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<resources>
    <string name="play_store_app_name">Notes - Fast &amp; Simple</string>
    <string name="privacy_policy_url">https://github.com/IconsNotFound/Notes/blob/main/PRIVACY.md</string>
    <string name="brand_name">IconsNotFound</string>
    <string name="youtube_url">https://www.youtube.com/@iconsnotfound</string>
    <string name="patreon_url">https://www.patreon.com/IconsNotFound</string>
    <string name="github_url">https://github.com/IconsNotFound/Notes/</string>
    <string name="notes_licence_sub_title">Notes  Copyright © 2025  IconsNotFound, released under the GPLv3 or later.</string>
    <string name="androidx_libraries">AndroidX libraries</string>
    <string name="apache_2_licence">Apache License 2.0</string>
    <string name="intuit_sdp">Intuit sdp</string>
    <string name="intuit_ssp">Intuit ssp</string>
    <string name="mit_licence">MIT License</string>
    <string name="material_design">Material Design icons by Google</string>

    <string name="hello_world">Hello World!</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="unsaved_changes_title">Unsaved Changes</string>
    <string name="unsaved_changes_message">You have unsaved changes. Do you want to save before leaving?</string>
    <string name="neutral">neutral</string>
    <string name="save">Save</string>
    <string name="do_not_save">Don\'t Save</string>
    <string name="cancel">Cancel</string>
    <string name="empty_save_message">Please enter some text before saving.</string>
    <string name="delete_note_title">Delete Note</string>
    <string name="delete_note_message">Are you sure you want to delete this note? Once deleted, it cannot be recovered.</string>
    <string name="delete_all_note_title">Delete All Notes?</string>
    <string name="delete_all_note_message">This will permanently delete all your notes. To confirm, solve this math problem:</string>
    <string name="delete_all_note_message_ext">\n\n\nWhat is %1$s ＋ %2$s ?</string>
    <string name="delete">Delete</string>
    <string name="share_note_chooser_dialog_title">Share note via</string>
    <string name="note_copied">Note copied</string>
    <string name="n_a">n/a</string>
    <string name="update_changes_title">Update Changes</string>
    <string name="update_changes_message">Do you want to update the current changes?</string>
    <string name="update">Update</string>
    <string name="do_not_update">Don\'t Update</string>
    <string name="theme">Theme</string>
    <string name="theme_default">System default</string>
    <string name="theme_light">Light</string>
    <string name="theme_dark">Dark</string>
    <string name="delete_all">Delete All</string>
    <string name="delete_all_sub">Erase all saved notes</string>
    <string name="delete_all_confirmation">All notes have been successfully deleted.</string>
    <string name="app_info">App info</string>
    <string name="add_a_note">add a note</string>
    <string name="no_notes_image">no notes image</string>
    <string name="settings_button">Go to settings</string>
    <string name="empty_notes_msg_1">No notes yet.</string>
    <string name="empty_notes_msg_2">Add your first note!</string>
    <string name="_0">0</string>
    <string name="notes">Notes</string>
    <string name="write_your_note">Write your note</string>
    <string name="back_button">Go back</string>
    <string name="create_note">Create Note</string>
    <string name="modify_note">Modify Note</string>
    <string name="settings">Settings</string>
    <string name="app_version">App Version</string>
    <string name="version">Version %s</string>
    <string name="share_note">Share this note</string>
    <string name="copy_note">Copy this note</string>
    <string name="delete_note">Delete this note</string>
    <string name="dialog_icon">Dialog icon</string>
    <string name="type_delete">Type "DELETE ALL" to confirm</string>
    <string name="hint">Hint</string>
    <string name="enter_the_answer_here">Enter the answer here</string>
    <string name="incorrect_answer">Incorrect answer. Please try again.</string>
    <string name="settings_item_logo">Settings item\'s logo.</string>
    <string name="settings_item_title">Settings item\'s title.</string>
    <string name="settings_item_sub_title">Settings item\'s sub-title.</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="privacy_policy_sub">No data is collected or shared</string>
    <string name="no_browser_found">No browser found to open the URL</string>
    <string name="choose_a_browser">Choose a browser</string>
    <string name="licences">Licences</string>
    <string name="open_source_licences_description">Open Source Licences</string>
    <string name="donate">Donate</string>
    <string name="donate_subtitle">Support on Patreon.</string>
    <string name="from">from</string>
    <string name="youtube_channel_link">Youtube channel link</string>
    <string name="brand_logo">Brand logo</string>
    <string name="github_repository_link">Github repository link</string>
    <string name="patreon_link">Patreon link</string>
    <string name="licences_item_title">Licences item\'s title.</string>
    <string name="licences_item_sub_title">Licences item\'s sub-title.</string>
    <string name="ok">OK</string>

</resources>