<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Notes - Fast &amp; Simple
  ~ Copyright (C) 2025 IconsNotFound
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="@dimen/_16sdp">

    <ImageView
        android:id="@+id/theme_dialog_icon"
        android:layout_width="@dimen/_24sdp"
        android:layout_height="@dimen/_24sdp"
        android:importantForAccessibility="no"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/theme_dialog_title"
        app:tint="?attr/colorOnPrimaryContainer"
        android:src="@drawable/icon_theme"/>

    <TextView
        android:id="@+id/theme_dialog_title"
        style="@style/DialogTitleTextView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/theme"
        app:layout_constraintStart_toEndOf="@id/theme_dialog_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginLeft="@dimen/_12sdp"/>

    <View
        android:id="@+id/horizontal_bar"
        android:layout_width="wrap_content"
        android:layout_height="1dp"
        app:layout_constraintTop_toBottomOf="@id/theme_dialog_title"
        app:layout_constraintStart_toStartOf="@id/theme_dialog_icon"
        app:layout_constraintEnd_toEndOf="@id/theme_dialog_title"
        android:background="?attr/colorOutlineVariant"
        android:layout_marginTop="@dimen/_16sdp"/>
    
    <RadioGroup
        android:id="@+id/theme_dialog_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintTop_toBottomOf="@id/horizontal_bar"
        android:layout_marginTop="@dimen/_12sdp">

        <RadioButton
            android:id="@+id/theme_dialog_radio_system_default"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_16sdp"
            android:text="@string/theme_default" />

        <RadioButton
            android:id="@+id/theme_dialog_radio_light"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_16sdp"
            android:text="@string/theme_light" />

        <RadioButton
            android:id="@+id/theme_dialog_radio_dark"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/_16sdp"
            android:text="@string/theme_dark" />



    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>