<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Notes - Fast &amp; Simple
  ~ Copyright (C) 2025 IconsNotFound
  ~
  ~ This program is free software: you can redistribute it and/or modify
  ~ it under the terms of the GNU General Public License as published by
  ~ the Free Software Foundation, either version 3 of the License, or
  ~ (at your option) any later version.
  ~
  ~ This program is distributed in the hope that it will be useful,
  ~ but WITHOUT ANY WARRANTY; without even the implied warranty of
  ~ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
  ~ GNU General Public License for more details.
  ~
  ~ You should have received a copy of the GNU General Public License
  ~ along with this program.  If not, see <https://www.gnu.org/licenses/>.
  -->

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
   android:padding="@dimen/_2sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/settings_card_view"
        style="@style/Widget.Material3.CardView.Outlined"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/md_theme_outlineVariant"
        app:cardCornerRadius="@dimen/_24sdp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/_20sdp">

            <ImageView
                android:id="@+id/settings_logo"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_20sdp"
                android:contentDescription="@string/settings_item_logo"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:src="@drawable/icon_app_logo_demo"
                app:tint="?attr/colorOnPrimaryContainer" />
            <TextView
                android:id="@+id/settings_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/settings_item_title"
                app:layout_constraintTop_toBottomOf="@id/settings_logo"
                app:layout_constraintStart_toStartOf="@id/settings_logo"
                android:textColor="?attr/colorOnSecondaryContainer"
                android:layout_marginTop="@dimen/_24sdp"
                android:ellipsize="none"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:scrollHorizontally="true"/>

            <TextView
                android:id="@+id/settings_sub_title"
                style="@style/TinyTextView"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/settings_item_sub_title"
                android:ellipsize="none"
                android:focusable="true"
                android:focusableInTouchMode="true"
                android:singleLine="true"
                android:scrollHorizontally="true"
                android:textColor="?attr/colorOnSecondaryContainer"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/settings_title"/>


            <ImageView
                android:id="@+id/settings_end_icon"
                android:layout_width="@dimen/_16sdp"
                android:layout_height="@dimen/_16sdp"
                android:importantForAccessibility="no"
                app:layout_constraintTop_toTopOf="@id/settings_logo"
                app:layout_constraintBottom_toBottomOf="@id/settings_logo"
                app:layout_constraintEnd_toEndOf="parent"
                android:src="@drawable/icon_forward"
                app:tint="?attr/colorSecondary"/>


        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>



</androidx.constraintlayout.widget.ConstraintLayout>